<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_bars">

    <fragment
        android:id="@+id/navigation_bars"
        android:name="com.barreservation.feature.bars.BarsFragment"
        android:label="@string/title_bars"
        tools:layout="@layout/fragment_bars" />

    <fragment
        android:id="@+id/navigation_reservations"
        android:name="com.barreservation.feature.reservations.ReservationsFragment"
        android:label="@string/title_reservations"
        tools:layout="@layout/fragment_reservations" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.barreservation.feature.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>